# segmentation-failure-analysis

./: .gitignore  README.md  analyze_edema_probe_screen.py  analyze_embedding_diagnostics.py  analyze_embedding_signal.py  analyze_failures.py  analyze_geometry.py  analyze_layer_holdout.py  analyze_layer_holdout_recoverability.py  analyze_layer_interventions.py  analyze_layer_recoverability.py  analyze_layer_significance.py  analyze_representation_editing.py  analyze_rescued_bad_cases.py  analyze_volume_probe_screen.py  compare_baselines.py  export_layer_embeddings.py  learn_semantic_directions.py  pyproject.toml  requirements.txt  train.py  train_converged.py
configs/: README.md  confidence_consistency_triage.yaml  consistency_failure_detection.yaml  converged_seed042_consistency.yaml  converged_seed042_export.yaml  converged_seed042_layer_aware.yaml  converged_seed042_method_validation.yaml  converged_seed042_triage.yaml  converged_unet.yaml  debug.yaml  default.yaml  fast.yaml  fast_classifier_inverted_repair.yaml  five_epoch_533.yaml  fullscale.yaml  layer_aware_latent_risk.yaml  method_validation.yaml  midscale.yaml  ten_hour.yaml  thirty_min.yaml
data/: README.md
docs/: README.md  paper_pipeline.md  reporting_notes.md
extra/: README.md
outputs_confidence_consistency_triage/: aggregate_metrics.csv  artifact_inventory.md  bootstrap_comparisons.csv  calibration_metrics.csv  complementarity_analysis.csv  feature_coefficients.csv  final_report.md  fold_assignments.csv  fold_metrics.csv  heldout_predictions.csv  risk_coverage_metrics.csv  robustness_results.csv  (+1 more)
(+301 files in other folders)
