[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brats-failure-triage"
version = "0.1.0"
description = "Confidence + representation–output consistency for BraTS failure triage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.0.0",
  "numpy>=1.24.0",
  "nibabel>=5.0.0",
  "scipy>=1.10.0",
  "PyYAML>=6.0",
  "tqdm>=4.65.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "umap-learn>=0.5.5",
  "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
